# defi_bi_seminar

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.sh
config/: settings.yaml
notebooks/: exploration.ipynb
src/: __init__.py  cli.py
src/clients/: __init__.py  coingecko.py  defillama.py  dexscreener.py
src/extract/: __init__.py  coingecko_extract.py  defillama_extract.py  dexscreener_extract.py
src/load/: __init__.py  export_tableau.py  export_tableau_fixed.py  export_tableau_old.py
src/transform/: __init__.py  combine_historical_batches.py  combine_historical_batches_efficient.py  features_basic.py  generate_historical_tvl.py  normalize_markets.py  normalize_tvl.py
src/utils/: __init__.py  http.py  io.py  time.py
tests/: __init__.py  test_schemas.py
